test random guess model

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -119,8 +119,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Versus Random Guess"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running for Logistic Regression/exclude_previous_rating_model_1/exclude_previous_rating_model_1_predictions.xlsx and Random Guess/Rating_RG_Preds.xlsx\n",
+      "  ticker fixed_quarter_date Rating exclude_previous_rating_model_1_predictions\n",
+      "0   AAPL         2016-07-01     AA                                         AAA\n",
+      "1   ABBV         2015-04-01      A                                          AA\n",
+      "2   ABBV         2016-04-01      A                                          BB\n",
+      "3    ABC         2012-04-01      A                                          BB\n",
+      "4    ABC         2013-01-01      A                                          BB\n",
+      "  ticker fixed_quarter_date Rating pred\n",
+      "0   AAPL         2016-07-01     AA   BB\n",
+      "1   AMZN         2013-07-01     AA  BBB\n",
+      "2    ATO         2016-10-01     AA  BBB\n",
+      "3    CAT         2016-04-01     AA   BB\n",
+      "4   CSCO         2016-04-01     AA    A\n",
+      "model 1 accuracy: 0.19230769230769232\n",
+      "model 2 accuracy: 0.22450805008944544\n",
+      "McNemar's Test contingency table:\n",
+      "[[47, 168], [204, 699]]\n",
+      "Test results, non-exact, no continuity correction:\n",
+      "pvalue      0.06196961991403888\n",
+      "statistic   3.4838709677419355\n",
+      "Test results, non-exact, with continuity correction:\n",
+      "pvalue      0.0695753352309631\n",
+      "statistic   3.293010752688172\n",
+      "Test results, exact, no continuity correction:\n",
+      "pvalue      0.06943183779269604\n",
+      "statistic   168.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_models('Logistic Regression/exclude_previous_rating_model_1/exclude_previous_rating_model_1_predictions.xlsx',\n",
+    "            'Random Guess/Rating_RG_Preds.xlsx',\n",
+    "            'Logistic - Exclude Previous Rating, Altman-Z Only',\n",
+    "            'Rating Random Guess Model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NLP Features Contribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1093,6 +1152,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Logistic - Exclude Previous Rating, Altman-Z Only</td>\n",
+       "      <td>Rating Random Guess Model</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>Logistic - Exclude Previous Rating - Fin Only</td>\n",
        "      <td>Logistic - Exclude Previous Rating - Fin + NLP</td>\n",
        "      <td>0.31</td>\n",
@@ -1100,7 +1167,7 @@
        "      <td>0.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>Logistic - Include Previous Rating - Fin Only</td>\n",
        "      <td>Logistic - Include Previous Rating - Fin + NLP</td>\n",
        "      <td>-</td>\n",
@@ -1108,7 +1175,7 @@
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>Logistic - SMOTE Rating Change - Fin Only</td>\n",
        "      <td>Logistic - SMOTE Rating Change - Fin + NLP</td>\n",
        "      <td>0.17</td>\n",
@@ -1116,7 +1183,7 @@
        "      <td>0.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>XGBoost - Exclude Previous Rating - Fin Only</td>\n",
        "      <td>XGBoost - Exclude Previous Rating - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
@@ -1124,7 +1191,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>XGBoost - Include Previous Rating - Fin Only</td>\n",
        "      <td>XGBoost - Include Previous Rating - Fin + NLP</td>\n",
        "      <td>-</td>\n",
@@ -1132,7 +1199,7 @@
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>XGBoost - SMOTE Rating Change - Fin Only</td>\n",
        "      <td>XGBoost - SMOTE Rating Change - Fin + NLP</td>\n",
        "      <td>0.06</td>\n",
@@ -1140,7 +1207,7 @@
        "      <td>0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>Logistic Regression - Retrain on GNN Data - Fi...</td>\n",
        "      <td>0.03</td>\n",
@@ -1148,7 +1215,7 @@
        "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>Logistic Regression - Pretrained, on GNN Data ...</td>\n",
        "      <td>0.08</td>\n",
@@ -1156,7 +1223,7 @@
        "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>XGBoost - Retrain on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
@@ -1164,7 +1231,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>XGBoost - Pretrained, on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
@@ -1172,7 +1239,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>GNN - Transductive - Fin Only</td>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>0.17</td>\n",
@@ -1180,7 +1247,7 @@
        "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>GNN - Transductive - Fin Only</td>\n",
        "      <td>GNN - Inductive - Fin Only</td>\n",
        "      <td>0.83</td>\n",
@@ -1188,7 +1255,7 @@
        "      <td>0.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>0.48</td>\n",
@@ -1196,7 +1263,7 @@
        "      <td>0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>Logistic Regression - Retrain on GNN Data - Fi...</td>\n",
        "      <td>0.01</td>\n",
@@ -1204,7 +1271,7 @@
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>Logistic Regression - Pretrained, on GNN Data ...</td>\n",
        "      <td>0.03</td>\n",
@@ -1212,7 +1279,7 @@
        "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>16</th>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>XGBoost - Retrain on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
@@ -1220,7 +1287,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>17</th>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>XGBoost - Pretrained, on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
@@ -1228,7 +1295,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>18</th>\n",
        "      <td>GNN - Inductive - Fin Only</td>\n",
        "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>0.1</td>\n",
@@ -1240,68 +1307,71 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          Model A  \\\n",
-       "0   Logistic - Exclude Previous Rating - Fin Only   \n",
-       "1   Logistic - Include Previous Rating - Fin Only   \n",
-       "2       Logistic - SMOTE Rating Change - Fin Only   \n",
-       "3    XGBoost - Exclude Previous Rating - Fin Only   \n",
-       "4    XGBoost - Include Previous Rating - Fin Only   \n",
-       "5        XGBoost - SMOTE Rating Change - Fin Only   \n",
-       "6                  GNN - Transductive - Fin + NLP   \n",
-       "7                  GNN - Transductive - Fin + NLP   \n",
-       "8                  GNN - Transductive - Fin + NLP   \n",
-       "9                  GNN - Transductive - Fin + NLP   \n",
-       "10                  GNN - Transductive - Fin Only   \n",
-       "11                  GNN - Transductive - Fin Only   \n",
-       "12                 GNN - Transductive - Fin + NLP   \n",
-       "13                    GNN - Inductive - Fin + NLP   \n",
-       "14                    GNN - Inductive - Fin + NLP   \n",
-       "15                    GNN - Inductive - Fin + NLP   \n",
-       "16                    GNN - Inductive - Fin + NLP   \n",
-       "17                     GNN - Inductive - Fin Only   \n",
+       "                                              Model A  \\\n",
+       "0   Logistic - Exclude Previous Rating, Altman-Z Only   \n",
+       "1       Logistic - Exclude Previous Rating - Fin Only   \n",
+       "2       Logistic - Include Previous Rating - Fin Only   \n",
+       "3           Logistic - SMOTE Rating Change - Fin Only   \n",
+       "4        XGBoost - Exclude Previous Rating - Fin Only   \n",
+       "5        XGBoost - Include Previous Rating - Fin Only   \n",
+       "6            XGBoost - SMOTE Rating Change - Fin Only   \n",
+       "7                      GNN - Transductive - Fin + NLP   \n",
+       "8                      GNN - Transductive - Fin + NLP   \n",
+       "9                      GNN - Transductive - Fin + NLP   \n",
+       "10                     GNN - Transductive - Fin + NLP   \n",
+       "11                      GNN - Transductive - Fin Only   \n",
+       "12                      GNN - Transductive - Fin Only   \n",
+       "13                     GNN - Transductive - Fin + NLP   \n",
+       "14                        GNN - Inductive - Fin + NLP   \n",
+       "15                        GNN - Inductive - Fin + NLP   \n",
+       "16                        GNN - Inductive - Fin + NLP   \n",
+       "17                        GNN - Inductive - Fin + NLP   \n",
+       "18                         GNN - Inductive - Fin Only   \n",
        "\n",
        "                                              Model B p, Non-Exact  \\\n",
-       "0      Logistic - Exclude Previous Rating - Fin + NLP         0.31   \n",
-       "1      Logistic - Include Previous Rating - Fin + NLP            -   \n",
-       "2          Logistic - SMOTE Rating Change - Fin + NLP         0.17   \n",
-       "3       XGBoost - Exclude Previous Rating - Fin + NLP          0.0   \n",
-       "4       XGBoost - Include Previous Rating - Fin + NLP            -   \n",
-       "5           XGBoost - SMOTE Rating Change - Fin + NLP         0.06   \n",
-       "6   Logistic Regression - Retrain on GNN Data - Fi...         0.03   \n",
-       "7   Logistic Regression - Pretrained, on GNN Data ...         0.08   \n",
-       "8           XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
-       "9       XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
-       "10                     GNN - Transductive - Fin + NLP         0.17   \n",
-       "11                         GNN - Inductive - Fin Only         0.83   \n",
-       "12                        GNN - Inductive - Fin + NLP         0.48   \n",
-       "13  Logistic Regression - Retrain on GNN Data - Fi...         0.01   \n",
-       "14  Logistic Regression - Pretrained, on GNN Data ...         0.03   \n",
-       "15          XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
-       "16      XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
-       "17                        GNN - Inductive - Fin + NLP          0.1   \n",
+       "0                           Rating Random Guess Model         0.06   \n",
+       "1      Logistic - Exclude Previous Rating - Fin + NLP         0.31   \n",
+       "2      Logistic - Include Previous Rating - Fin + NLP            -   \n",
+       "3          Logistic - SMOTE Rating Change - Fin + NLP         0.17   \n",
+       "4       XGBoost - Exclude Previous Rating - Fin + NLP          0.0   \n",
+       "5       XGBoost - Include Previous Rating - Fin + NLP            -   \n",
+       "6           XGBoost - SMOTE Rating Change - Fin + NLP         0.06   \n",
+       "7   Logistic Regression - Retrain on GNN Data - Fi...         0.03   \n",
+       "8   Logistic Regression - Pretrained, on GNN Data ...         0.08   \n",
+       "9           XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
+       "10      XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
+       "11                     GNN - Transductive - Fin + NLP         0.17   \n",
+       "12                         GNN - Inductive - Fin Only         0.83   \n",
+       "13                        GNN - Inductive - Fin + NLP         0.48   \n",
+       "14  Logistic Regression - Retrain on GNN Data - Fi...         0.01   \n",
+       "15  Logistic Regression - Pretrained, on GNN Data ...         0.03   \n",
+       "16          XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
+       "17      XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
+       "18                        GNN - Inductive - Fin + NLP          0.1   \n",
        "\n",
        "   p, Non-Exact, Continuity Corrected p, Exact  \n",
-       "0                                0.35     0.35  \n",
-       "1                                   -        -  \n",
-       "2                                0.19     0.19  \n",
-       "3                                 0.0      0.0  \n",
-       "4                                   -        -  \n",
-       "5                                0.11     0.11  \n",
-       "6                                0.03     0.03  \n",
-       "7                                0.09     0.09  \n",
-       "8                                 0.0      0.0  \n",
+       "0                                0.07     0.07  \n",
+       "1                                0.35     0.35  \n",
+       "2                                   -        -  \n",
+       "3                                0.19     0.19  \n",
+       "4                                 0.0      0.0  \n",
+       "5                                   -        -  \n",
+       "6                                0.11     0.11  \n",
+       "7                                0.03     0.03  \n",
+       "8                                0.09     0.09  \n",
        "9                                 0.0      0.0  \n",
-       "10                               0.21     0.21  \n",
-       "11                               0.92     0.92  \n",
-       "12                               0.55     0.55  \n",
-       "13                               0.01     0.01  \n",
-       "14                               0.04     0.04  \n",
-       "15                                0.0      0.0  \n",
+       "10                                0.0      0.0  \n",
+       "11                               0.21     0.21  \n",
+       "12                               0.92     0.92  \n",
+       "13                               0.55     0.55  \n",
+       "14                               0.01     0.01  \n",
+       "15                               0.04     0.04  \n",
        "16                                0.0      0.0  \n",
-       "17                               0.12     0.12  "
+       "17                                0.0      0.0  \n",
+       "18                               0.12     0.12  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
