--- a/Output/Modelling/p_values_table.tex
+++ b/Output/Modelling/p_values_table.tex
@@ -3,6 +3,7 @@
 \toprule
 Model A & Model B & p, Non-Exact & p, Non-Exact, Continuity Corrected & p, Exact \\
 \midrule
+Logistic - Exclude Previous Rating, Altman-Z Only & Rating Random Guess Model & 0.06 & 0.07 & 0.07 \\
 Logistic - Exclude Previous Rating - Fin Only & Logistic - Exclude Previous Rating - Fin + NLP & 0.31 & 0.35 & 0.35 \\
 Logistic - Include Previous Rating - Fin Only & Logistic - Include Previous Rating - Fin + NLP & - & - & - \\
 Logistic - SMOTE Rating Change - Fin Only & Logistic - SMOTE Rating Change - Fin + NLP & 0.17 & 0.19 & 0.19 \\
