xgb random guess change tests

--- a/Output/Modelling/p_values_table.tex
+++ b/Output/Modelling/p_values_table.tex
@@ -10,6 +10,8 @@ Logistic - SMOTE Rating Change - Fin Only & Logistic - SMOTE Rating Change - Fin
 XGBoost - Exclude Previous Rating - Fin Only & XGBoost - Exclude Previous Rating - Fin + NLP & 0.0 & 0.0 & 0.0 \\
 XGBoost - Include Previous Rating - Fin Only & XGBoost - Include Previous Rating - Fin + NLP & - & - & - \\
 XGBoost - SMOTE Rating Change - Fin Only & XGBoost - SMOTE Rating Change - Fin + NLP & 0.06 & 0.11 & 0.11 \\
+XGBoost - SMOTE Rating Change - Fin Only & Change Random Guess Model & 0.0 & 0.0 & 0.0 \\
+XGBoost - SMOTE Rating Change - Fin + NLP & Change Random Guess Model & 0.0 & 0.0 & 0.0 \\
 GNN - Transductive - Fin + NLP & Logistic Regression - Retrain on GNN Data - Fin + NLP & 0.03 & 0.03 & 0.03 \\
 GNN - Transductive - Fin + NLP & Logistic Regression - Pretrained, on GNN Data - Fin + NLP & 0.08 & 0.09 & 0.09 \\
 GNN - Transductive - Fin + NLP & XGBoost - Retrain on GNN Data - Fin + NLP & 0.0 & 0.0 & 0.0 \\
