fix aspect ratio by applying tight layout for rating altman z plot

--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -71,3 +71,5 @@
 \renewcommand{\numCompanies}{429}
 \renewcommand{\numQuarters}{5,509}
 \renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
