train-test split

--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -73,3 +73,7 @@
 \renewcommand{\numCompanies}{429}
 \renewcommand{\numQuarters}{5,509}
 \renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
