--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -28,3 +28,7 @@
 \renewcommand{\shareNotChangesTest}{95.35\%}
 \renewcommand{\shareNotChanges}{94.79\%}
 \renewcommand{\shareNotChangesTest}{95.35\%}
+\renewcommand{\shareNotChanges}{94.79\%}
+\renewcommand{\shareNotChangesTest}{95.35\%}
+\renewcommand{\shareNotChanges}{94.79\%}
+\renewcommand{\shareNotChangesTest}{95.35\%}
