edit p values table col names

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -762,20 +762,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running for Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx and Graph Neural Network/Other Classifiers on GNN Data/xgb_retrain_predictions.xlsx\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "running for Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx and Graph Neural Network/Other Classifiers on GNN Data/xgb_retrain_predictions.xlsx\n",
       "  ticker fixed_quarter_date target pred\n",
       "0   AAPL         2016-07-01     AA   AA\n",
       "1   ABBV         2015-04-01      A   AA\n",
@@ -813,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1266,8 +1260,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Model A</th>\n",
-       "      <th>Model B</th>\n",
+       "      <th>Model X</th>\n",
+       "      <th>Model Y</th>\n",
        "      <th>p, Non-Exact</th>\n",
        "      <th>p, Non-Exact, Continuity Corrected</th>\n",
        "      <th>p, Exact</th>\n",
@@ -1447,7 +1441,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                              Model A  \\\n",
+       "                                              Model X  \\\n",
        "0   Logistic - Exclude Previous Rating, Altman-Z Only   \n",
        "1       Logistic - Exclude Previous Rating - Fin Only   \n",
        "2       Logistic - Include Previous Rating - Fin Only   \n",
@@ -1470,7 +1464,7 @@
        "19                        GNN - Inductive - Fin + NLP   \n",
        "20                         GNN - Inductive - Fin Only   \n",
        "\n",
-       "                                              Model B p, Non-Exact  \\\n",
+       "                                              Model Y p, Non-Exact  \\\n",
        "0                           Rating Random Guess Model         0.06   \n",
        "1      Logistic - Exclude Previous Rating - Fin + NLP         0.31   \n",
        "2      Logistic - Include Previous Rating - Fin + NLP            -   \n",
@@ -1517,7 +1511,7 @@
        "20                               0.12     0.12  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,6 +1549,9 @@
     "# Repalce 'Pretrained on' with 'Pretrained, on'\n",
     "p_values_table['Model A'] = p_values_table['Model A'].str.replace('Pretrained on', 'Pretrained, on')\n",
     "p_values_table['Model B'] = p_values_table['Model B'].str.replace('Pretrained on', 'Pretrained, on')\n",
+    "\n",
+    "# Rename Model A to Model X and Model B to Model Y\n",
+    "p_values_table = p_values_table.rename(columns={'Model A': 'Model X', 'Model B': 'Model Y'})\n",
     "\n",
     "# Export to LaTeX\n",
     "# Center all columns\n",
