--- a/Output/Modelling/p_values_table.tex
+++ b/Output/Modelling/p_values_table.tex
@@ -1,7 +1,7 @@
 \tiny
 \begin{tabular}{ccccc}
 \toprule
-Model A & Model B & p, Non-Exact & p, Non-Exact, Continuity Corrected & p, Exact \\
+Model X & Model Y & p, Non-Exact & p, Non-Exact, Continuity Corrected & p, Exact \\
 \midrule
 Logistic - Exclude Previous Rating, Altman-Z Only & Rating Random Guess Model & 0.06 & 0.07 & 0.07 \\
 Logistic - Exclude Previous Rating - Fin Only & Logistic - Exclude Previous Rating - Fin + NLP & 0.31 & 0.35 & 0.35 \\
